--- a/approuter/package.json
+++ b/approuter/package.json
@@ -9,6 +9,6 @@
     "@sap/approuter": "^16.0.0"
   },
   "scripts": {
-    "start": "node node_modules/@sap/approuter/approuter.js"
+    "start": "node server.js"
   }
 }
